# markgrab

./: .gitignore  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json
markgrab/: core.py  result.py  utils.py
markgrab/anti_bot/: stealth.py
markgrab/engine/: browser.py
markgrab/filter/: __init__.py  density.py  noise.py  truncate.py
markgrab/parser/: __init__.py  base.py  html.py  pdf.py
tests/: test_html_parser.py
