[project]
name = "markgrab"
version = "0.1.1"
description = "Universal web content extraction — URL to LLM-ready markdown"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "hmj"}]
readme = "README.md"
keywords = ["web-scraping", "content-extraction", "markdown", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "markdownify>=0.14",
]

[project.urls]
Homepage = "https://github.com/QuartzUnit/markgrab"
Repository = "https://github.com/QuartzUnit/markgrab"
Issues = "https://github.com/QuartzUnit/markgrab/issues"

[project.optional-dependencies]
browser = ["playwright>=1.49"]
youtube = ["youtube-transcript-api>=1.0"]
pdf = ["pdfplumber>=0.11"]
docx = ["python-docx>=1.1"]
all = [
    "playwright>=1.49",
    "youtube-transcript-api>=1.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
markgrab = "markgrab.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
